--- a/practice_script.ipynb
+++ b/practice_script.ipynb
@@ -1210,7 +1210,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### StopWrods in spaCy"
+    "### Noun Chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dirty little fox\n",
+      "the hill\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc5 = nlp('The dirty little fox jumped over the hill')\n",
+    "for token in doc5.noun_chunks:\n",
+    "    print(token.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fox\n",
+      "hill\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc5.noun_chunks:\n",
+    "    print(token.root.text)"
    ]
   },
   {
