--- a/script.ipynb
+++ b/script.ipynb
@@ -8,14 +8,14 @@
     "1. subject/object/verb/adverb/adjective/abbrevation = yes,no\n",
     "1. voice = active,passive\n",
     "1. type of sentences = immperative, interrogative, exclamative, declarative, negative, affirmative etc.\n",
-    "1. figures of speech = metaphor, simili, parsonification, idiom\n",
-    "1. Tense = present, past, simple, particple, etc.\n",
+    "1. figures of speech = metaphor, simili, personification, idiom\n",
+    "1. Tense = present, past, simple, participle, etc.\n",
     "1. Code Switching = yes, no\n",
     "1. Typos = yes, no\n",
     "1. Emojis = yes, no\n",
     "1. Homoglyphs = yes, no\n",
     "1. Special Characters = yes, no\n",
-    "1. Gramatical Correctness = yes, no\n",
+    "1. Grammatical Correctness = yes, no\n",
     "1. Clause = Dependent, independent, subordinate"
    ]
   },
@@ -121,13 +121,7 @@
       "nsubjpass NN auxpass VBD advmod RB ROOT VBN prep IN det DT amod JJ pobj NN agent IN pobj NNP punct . \n",
       "poss PRP$ compound NNS nsubjpass NN auxpass VBD neg RB ROOT VBN prep IN agent IN pobj NN punct . \n",
       "predet PDT det DT nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
-      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n",
       "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
       "det DT nsubjpass NN auxpass VBD ROOT VBN prep IN pobj NNP agent IN pobj NNP punct . \n",
       "nsubjpass NNS aux MD auxpass VB ROOT VBN dative IN pobj PRP agent IN det DT pobj NN punct . \n",
