--- a/script.ipynb
+++ b/script.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,13 @@
       "nsubjpass NN auxpass VBD advmod RB ROOT VBN prep IN det DT amod JJ pobj NN agent IN pobj NNP punct . \n",
       "poss PRP$ compound NNS nsubjpass NN auxpass VBD neg RB ROOT VBN prep IN agent IN pobj NN punct . \n",
       "predet PDT det DT nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
-      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n",
+      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
       "det DT nsubjpass NN auxpass VBD ROOT VBN prep IN pobj NNP agent IN pobj NNP punct . \n",
       "nsubjpass NNS aux MD auxpass VB ROOT VBN dative IN pobj PRP agent IN det DT pobj NN punct . \n",
@@ -338,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +353,7 @@
        "\"assert doc[2:5]._.has_emoji == True\\nassert doc[0]._.is_emoji == False\\nassert doc[4]._.is_emoji == True\\nassert doc[5]._.emoji_desc == u'thumbs up dark skin tone'\\nassert len(doc._.emoji) == 2\\nassert doc._.emoji[1] == (u'👍🏿', 5, u'thumbs up dark skin tone')\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,11 +375,299 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Sentiment Analysis\n",
+    "Using an LSTM sentiment classification model trained using Keras in spaCy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cytoolz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-3fefb19146bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cytoolz'"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "This example shows how to use an LSTM sentiment classification model trained\n",
+    "using Keras in spaCy. spaCy splits the document into sentences, and each\n",
+    "sentence is classified using the LSTM. The scores for the sentences are then\n",
+    "aggregated to give the document score. This kind of hierarchical model is quite\n",
+    "difficult in \"pure\" Keras or Tensorflow, but it's very effective. The Keras\n",
+    "example on this dataset performs quite poorly, because it cuts off the documents\n",
+    "so that they're a fixed size. This hurts review accuracy a lot, because people\n",
+    "often summarise their rating in the final sentence\n",
+    "\n",
+    "Prerequisites:\n",
+    "spacy download en_vectors_web_lg\n",
+    "pip install keras==2.0.9\n",
+    "\n",
+    "Compatible with: spaCy v2.0.0+\n",
+    "\"\"\"\n",
+    "\n",
+    "import plac\n",
+    "import random\n",
+    "import pathlib\n",
+    "import cytoolz\n",
+    "import numpy\n",
+    "from keras.models import Sequential, model_from_json\n",
+    "from keras.layers import LSTM, Dense, Embedding, Bidirectional\n",
+    "from keras.layers import TimeDistributed\n",
+    "from keras.optimizers import Adam\n",
+    "import thinc.extra.datasets\n",
+    "from spacy.compat import pickle\n",
+    "import spacy\n",
+    "\n",
+    "\n",
+    "class SentimentAnalyser(object):\n",
+    "    @classmethod\n",
+    "    def load(cls, path, nlp, max_length=100):\n",
+    "        with (path / \"config.json\").open() as file_:\n",
+    "            model = model_from_json(file_.read())\n",
+    "        with (path / \"model\").open(\"rb\") as file_:\n",
+    "            lstm_weights = pickle.load(file_)\n",
+    "        embeddings = get_embeddings(nlp.vocab)\n",
+    "        model.set_weights([embeddings] + lstm_weights)\n",
+    "        return cls(model, max_length=max_length)\n",
+    "\n",
+    "    def __init__(self, model, max_length=100):\n",
+    "        self._model = model\n",
+    "        self.max_length = max_length\n",
+    "\n",
+    "    def __call__(self, doc):\n",
+    "        X = get_features([doc], self.max_length)\n",
+    "        y = self._model.predict(X)\n",
+    "        self.set_sentiment(doc, y)\n",
+    "\n",
+    "    def pipe(self, docs, batch_size=1000):\n",
+    "        for minibatch in cytoolz.partition_all(batch_size, docs):\n",
+    "            minibatch = list(minibatch)\n",
+    "            sentences = []\n",
+    "            for doc in minibatch:\n",
+    "                sentences.extend(doc.sents)\n",
+    "            Xs = get_features(sentences, self.max_length)\n",
+    "            ys = self._model.predict(Xs)\n",
+    "            for sent, label in zip(sentences, ys):\n",
+    "                sent.doc.sentiment += label - 0.5\n",
+    "            for doc in minibatch:\n",
+    "                yield doc\n",
+    "\n",
+    "    def set_sentiment(self, doc, y):\n",
+    "        doc.sentiment = float(y[0])\n",
+    "        # Sentiment has a native slot for a single float.\n",
+    "        # For arbitrary data storage, there's:\n",
+    "        # doc.user_data['my_data'] = y\n",
+    "\n",
+    "\n",
+    "def get_labelled_sentences(docs, doc_labels):\n",
+    "    labels = []\n",
+    "    sentences = []\n",
+    "    for doc, y in zip(docs, doc_labels):\n",
+    "        for sent in doc.sents:\n",
+    "            sentences.append(sent)\n",
+    "            labels.append(y)\n",
+    "    return sentences, numpy.asarray(labels, dtype=\"int32\")\n",
+    "\n",
+    "\n",
+    "def get_features(docs, max_length):\n",
+    "    docs = list(docs)\n",
+    "    Xs = numpy.zeros((len(docs), max_length), dtype=\"int32\")\n",
+    "    for i, doc in enumerate(docs):\n",
+    "        j = 0\n",
+    "        for token in doc:\n",
+    "            vector_id = token.vocab.vectors.find(key=token.orth)\n",
+    "            if vector_id >= 0:\n",
+    "                Xs[i, j] = vector_id\n",
+    "            else:\n",
+    "                Xs[i, j] = 0\n",
+    "            j += 1\n",
+    "            if j >= max_length:\n",
+    "                break\n",
+    "    return Xs\n",
+    "\n",
+    "\n",
+    "def train(\n",
+    "    train_texts,\n",
+    "    train_labels,\n",
+    "    dev_texts,\n",
+    "    dev_labels,\n",
+    "    lstm_shape,\n",
+    "    lstm_settings,\n",
+    "    lstm_optimizer,\n",
+    "    batch_size=100,\n",
+    "    nb_epoch=5,\n",
+    "    by_sentence=True,\n",
+    "):\n",
+    "\n",
+    "    print(\"Loading spaCy\")\n",
+    "    nlp = spacy.load(\"en_vectors_web_lg\")\n",
+    "    nlp.add_pipe(nlp.create_pipe(\"sentencizer\"))\n",
+    "    embeddings = get_embeddings(nlp.vocab)\n",
+    "    model = compile_lstm(embeddings, lstm_shape, lstm_settings)\n",
+    "\n",
+    "    print(\"Parsing texts...\")\n",
+    "    train_docs = list(nlp.pipe(train_texts))\n",
+    "    dev_docs = list(nlp.pipe(dev_texts))\n",
+    "    if by_sentence:\n",
+    "        train_docs, train_labels = get_labelled_sentences(train_docs, train_labels)\n",
+    "        dev_docs, dev_labels = get_labelled_sentences(dev_docs, dev_labels)\n",
+    "\n",
+    "    train_X = get_features(train_docs, lstm_shape[\"max_length\"])\n",
+    "    dev_X = get_features(dev_docs, lstm_shape[\"max_length\"])\n",
+    "    model.fit(\n",
+    "        train_X,\n",
+    "        train_labels,\n",
+    "        validation_data=(dev_X, dev_labels),\n",
+    "        epochs=nb_epoch,\n",
+    "        batch_size=batch_size,\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def compile_lstm(embeddings, shape, settings):\n",
+    "    model = Sequential()\n",
+    "    model.add(\n",
+    "        Embedding(\n",
+    "            embeddings.shape[0],\n",
+    "            embeddings.shape[1],\n",
+    "            input_length=shape[\"max_length\"],\n",
+    "            trainable=False,\n",
+    "            weights=[embeddings],\n",
+    "            mask_zero=True,\n",
+    "        )\n",
+    "    )\n",
+    "    model.add(TimeDistributed(Dense(shape[\"nr_hidden\"], use_bias=False)))\n",
+    "    model.add(\n",
+    "        Bidirectional(\n",
+    "            LSTM(\n",
+    "                shape[\"nr_hidden\"],\n",
+    "                recurrent_dropout=settings[\"dropout\"],\n",
+    "                dropout=settings[\"dropout\"],\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    model.add(Dense(shape[\"nr_class\"], activation=\"sigmoid\"))\n",
+    "    model.compile(\n",
+    "        optimizer=Adam(lr=settings[\"lr\"]),\n",
+    "        loss=\"binary_crossentropy\",\n",
+    "        metrics=[\"accuracy\"],\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def get_embeddings(vocab):\n",
+    "    return vocab.vectors.data\n",
+    "\n",
+    "\n",
+    "def evaluate(model_dir, texts, labels, max_length=100):\n",
+    "    nlp = spacy.load(\"en_vectors_web_lg\")\n",
+    "    nlp.add_pipe(nlp.create_pipe(\"sentencizer\"))\n",
+    "    nlp.add_pipe(SentimentAnalyser.load(model_dir, nlp, max_length=max_length))\n",
+    "\n",
+    "    correct = 0\n",
+    "    i = 0\n",
+    "    for doc in nlp.pipe(texts, batch_size=1000):\n",
+    "        correct += bool(doc.sentiment >= 0.5) == bool(labels[i])\n",
+    "        i += 1\n",
+    "    return float(correct) / i\n",
+    "\n",
+    "\n",
+    "def read_data(data_dir, limit=0):\n",
+    "    examples = []\n",
+    "    for subdir, label in ((\"pos\", 1), (\"neg\", 0)):\n",
+    "        for filename in (data_dir / subdir).iterdir():\n",
+    "            with filename.open() as file_:\n",
+    "                text = file_.read()\n",
+    "            examples.append((text, label))\n",
+    "    random.shuffle(examples)\n",
+    "    if limit >= 1:\n",
+    "        examples = examples[:limit]\n",
+    "    return zip(*examples)  # Unzips into two lists\n",
+    "\n",
+    "\n",
+    "@plac.annotations(\n",
+    "    train_dir=(\"Location of training file or directory\"),\n",
+    "    dev_dir=(\"Location of development file or directory\"),\n",
+    "    model_dir=(\"Location of output model directory\",),\n",
+    "    is_runtime=(\"Demonstrate run-time usage\", \"flag\", \"r\", bool),\n",
+    "    nr_hidden=(\"Number of hidden units\", \"option\", \"H\", int),\n",
+    "    max_length=(\"Maximum sentence length\", \"option\", \"L\", int),\n",
+    "    dropout=(\"Dropout\", \"option\", \"d\", float),\n",
+    "    learn_rate=(\"Learn rate\", \"option\", \"e\", float),\n",
+    "    nb_epoch=(\"Number of training epochs\", \"option\", \"i\", int),\n",
+    "    batch_size=(\"Size of minibatches for training LSTM\", \"option\", \"b\", int),\n",
+    "    nr_examples=(\"Limit to N examples\", \"option\", \"n\", int),\n",
+    ")\n",
+    "def main(\n",
+    "    model_dir=None,\n",
+    "    train_dir=None,\n",
+    "    dev_dir=None,\n",
+    "    is_runtime=False,\n",
+    "    nr_hidden=64,\n",
+    "    max_length=100,  # Shape\n",
+    "    dropout=0.5,\n",
+    "    learn_rate=0.001,  # General NN config\n",
+    "    nb_epoch=5,\n",
+    "    batch_size=256,\n",
+    "    nr_examples=-1,\n",
+    "):  # Training params\n",
+    "    if model_dir is not None:\n",
+    "        model_dir = pathlib.Path(model_dir)\n",
+    "    if train_dir is None or dev_dir is None:\n",
+    "        imdb_data = thinc.extra.datasets.imdb()\n",
+    "    if is_runtime:\n",
+    "        if dev_dir is None:\n",
+    "            dev_texts, dev_labels = zip(*imdb_data[1])\n",
+    "        else:\n",
+    "            dev_texts, dev_labels = read_data(dev_dir)\n",
+    "        acc = evaluate(model_dir, dev_texts, dev_labels, max_length=max_length)\n",
+    "        print(acc)\n",
+    "    else:\n",
+    "        if train_dir is None:\n",
+    "            train_texts, train_labels = zip(*imdb_data[0])\n",
+    "        else:\n",
+    "            print(\"Read data\")\n",
+    "            train_texts, train_labels = read_data(train_dir, limit=nr_examples)\n",
+    "        if dev_dir is None:\n",
+    "            dev_texts, dev_labels = zip(*imdb_data[1])\n",
+    "        else:\n",
+    "            dev_texts, dev_labels = read_data(dev_dir, imdb_data, limit=nr_examples)\n",
+    "        train_labels = numpy.asarray(train_labels, dtype=\"int32\")\n",
+    "        dev_labels = numpy.asarray(dev_labels, dtype=\"int32\")\n",
+    "        lstm = train(\n",
+    "            train_texts,\n",
+    "            train_labels,\n",
+    "            dev_texts,\n",
+    "            dev_labels,\n",
+    "            {\"nr_hidden\": nr_hidden, \"max_length\": max_length, \"nr_class\": 1},\n",
+    "            {\"dropout\": dropout, \"lr\": learn_rate},\n",
+    "            {},\n",
+    "            nb_epoch=nb_epoch,\n",
+    "            batch_size=batch_size,\n",
+    "        )\n",
+    "        weights = lstm.get_weights()\n",
+    "        if model_dir is not None:\n",
+    "            with (model_dir / \"model\").open(\"wb\") as file_:\n",
+    "                pickle.dump(weights[1:], file_)\n",
+    "            with (model_dir / \"config.json\").open(\"w\") as file_:\n",
+    "                file_.write(lstm.to_json())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    plac.call(main)"
+   ]
   }
  ],
  "metadata": {
