--- a/script.ipynb
+++ b/script.ipynb
@@ -121,13 +121,7 @@
       "nsubjpass NN auxpass VBD advmod RB ROOT VBN prep IN det DT amod JJ pobj NN agent IN pobj NNP punct . \n",
       "poss PRP$ compound NNS nsubjpass NN auxpass VBD neg RB ROOT VBN prep IN agent IN pobj NN punct . \n",
       "predet PDT det DT nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
-      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n",
       "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
       "det DT nsubjpass NN auxpass VBD ROOT VBN prep IN pobj NNP agent IN pobj NNP punct . \n",
       "nsubjpass NNS aux MD auxpass VB ROOT VBN dative IN pobj PRP agent IN det DT pobj NN punct . \n",
@@ -384,18 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cytoolz'",
+     "evalue": "No module named 'keras'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-3fefb19146bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cytoolz'"
+      "\u001b[1;32m<ipython-input-1-3fefb19146bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBidirectional\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTimeDistributed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
      ]
     }
    ],
@@ -668,6 +662,86 @@
     "if __name__ == \"__main__\":\n",
     "    plac.call(main)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "length is medium\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "length is high\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "length is medium\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "length is medium\n",
+      "lenght is low\n",
+      "length is high\n",
+      "lenght is low\n",
+      "length is medium\n",
+      "length is medium\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp=spacy.load(\"en_core_web_sm\")\n",
+    "myfile=(open('examplefile.txt' ,encoding=\"utf8\")).read()\n",
+    "doc_file=nlp(myfile)\n",
+    "def calcVerb(sente):\n",
+    "    c=0\n",
+    "    for word in sente:\n",
+    "        if(word.pos_=='VERB'):\n",
+    "            c=c+1\n",
+    "    if(c<3):\n",
+    "        print(\"lenght is low\")\n",
+    "    elif(c<6):\n",
+    "        print(\"length is medium\")\n",
+    "    else:\n",
+    "        print(\"length is high\")\n",
+    "for num,sent in enumerate(doc_file.sents):\n",
+    "    calcVerb(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -686,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
